# Chess

./: .gitignore  Makefile  README  README.md  lines-of-code.sh
semestral/: ..gitignore.swp  Doxyfile  Makefile  PA2output  README  Zadání  dependencies  lines-of-code.sh  prohlaseni.txt  template Makefile
semestral/saves/: CleanSetup.save  Kasi-Kaspar.save  PromotionSetup.save  PromotionTakeSetup.save  SolveCheckSetup.save  castleSetup.save  checkSetup.save  checkSetupSwitch.save  foolsSetup.save
semestral/src/: AI3.cpp  AI3.h  Application.cpp  Application.h  Board.h  ChessSetupMenu.h  ChoosePlayerCmd.cpp  ChoosePlayerCmd.h  ClassicalChessBoard.h  ExitCmd.h  Game.cpp  Game.h  Interface.h  King.h  Knight.h  LaunchGameCmd.h  LoadGameCmd.cpp  LoadGameCmd.h  LoadGameMenu.cpp  LoadGameMenu.h  LocalPlayer.cpp  LocalPlayer.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuLoadOptionCmd.h  MenuStartOptionCmd.cpp  MenuStartOptionCmd.h  OnlinePlayer.cpp  OnlinePlayer.h  Pawn.h  Player.h  ProgramOptions.cpp  ProgramOptions.h  Queen.h  Rook.h  StartGameMenu.h  boardPrinterExp  boardPrinterExp.cpp  (+3 more)
semestral/src/Application/: Application.cpp  Application.h  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  ProgramOptions.cpp  ProgramOptions.h  SaveManager.cpp  SaveManager.h  StartGameMenu.cpp  StartGameMenu.h  coordinates.h  moveTypes.h
semestral/src/Boards/: Board.cpp  Board.h  ClassicalChessBoard.cpp  ClassicalChessBoard.h
semestral/src/Commands/: BackCmd.cpp  BackCmd.h  ChoosePlayerCmd.h  ComingSoonCmd.cpp  ComingSoonCmd.h  Command.h  CommandManager.cpp  CommandManager.h  ExitCmd.cpp  ExitCmd.h  LaunchGameCmd.cpp  LaunchGameCmd.h  LoadGameCmd.cpp  LoadGameCmd.h  MenuLoadOptionCmd.h  MenuStartOptionCmd.h  SaveGameCmd.cpp  SetupGameCmd.h  StartGameCmd.cpp  StartGameCmd.h
semestral/src/Menus/: ChessSetupMenu.cpp  ChessSetupMenu.h  LoadGameMenu.h  MainMenu.h  Menu.h  StartGameMenu.h
semestral/src/Moves/: ChessMove.h
src/: Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Game.h  ProgramOptions.h  README  main.cpp  zadani.txt
src/Boards/: Board.h  ClassicalChessBoard.cpp  ClassicalChessBoard.h
src/Commands/: BackCmd.cpp  ComingSoonCmd.h  ExitCmd.cpp  LaunchGameCmd.cpp  LoadGameCmd.cpp
src/Menus/: ChessSetupMenu.h  LoadGameMenu.cpp  LoadGameMenu.h  MainMenu.h  StartGameMenu.cpp  StartGameMenu.h
src/Pieces/: Bishop.cpp  King.h  Pawn.cpp  Piece.cpp  Piece.h  Queen.cpp  Rook.cpp
src/Players/: AI1.h  AI2.cpp  AI2.h  AI3.h  Player.h
src/UI/: ITerminal.h
src/Utility/: ChessMove.h
src/materials/: Youtube-Chess-AI.html
(+66 files in other folders)
