cmake_minimum_required(VERSION 3.21)
project(semestral)

set(CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_FLAGS "-pedantic -Wall -g")

add_executable(semestral
        src/main.cpp
        src/Application.h
        src/Application.cpp
        src/Game.cpp
        src/Game.h
        src/ProgramOptions.cpp
        src/ProgramOptions.h
        src/Menus/MainMenu.h
        src/Menus/MainMenu.cpp
        src/UI/Interface.h
        src/UI/ITerminal.h
        src/UI/ITerminal.cpp
        src/Commands/Command.h
        #src/Commands/CommandManager.cpp
        #src/Commands/CommandManager.h
        src/Commands/MenuStartOptionCmd.cpp
        src/Commands/MenuStartOptionCmd.h
        src/Commands/MenuLoadOptionCmd.cpp
        src/Commands/MenuLoadOptionCmd.h
        src/Commands/ExitCmd.cpp
        src/Commands/ExitCmd.h
        src/Menus/StartGameMenu.cpp
        src/Menus/StartGameMenu.h
        src/Boards/Board.h
        src/Boards/ClassicalChessBoard.h
        src/Boards/ClassicalChessBoard.cpp
        src/Pieces/Piece.h
        src/Pieces/Piece.cpp
        src/Pieces/Pawn.h
        src/Pieces/Pawn.cpp
        src/Pieces/King.cpp
        src/Pieces/King.h
        src/Pieces/Queen.h
        src/Pieces/Queen.cpp
        src/Pieces/Bishop.h
        src/Pieces/Bishop.cpp
        src/Pieces/Knight.h
        src/Pieces/Knight.cpp
        src/Pieces/Rook.h
        src/Pieces/Rook.cpp
        src/Players/Player.h
        src/Players/LocalPlayer.h
        src/Players/LocalPlayer.cpp
        src/Players/OnlinePlayer.h
        src/Players/OnlinePlayer.cpp
        src/Players/AI1.h
        src/Players/AI1.cpp
        src/Players/AI2.h
        src/Players/AI2.cpp
        src/Players/AI3.h
        src/Players/AI3.cpp
        src/Commands/SetupGameCmd.cpp
        src/Commands/SetupGameCmd.h
        src/Commands/ComingSoonCmd.cpp
        src/Commands/ComingSoonCmd.h
        src/Commands/BackCmd.cpp
        src/Commands/BackCmd.h
        src/Menus/ChessSetupMenu.cpp
        src/Menus/ChessSetupMenu.h
        src/Menus/Menu.h
        src/Commands/ChoosePlayerCmd.cpp
        src/Commands/ChoosePlayerCmd.h
        src/Commands/LaunchGameCmd.cpp src/Commands/LaunchGameCmd.h src/Menus/LoadGameMenu.cpp src/Menus/LoadGameMenu.h src/SaveManager.cpp src/SaveManager.h src/Commands/LoadGameCmd.cpp src/Commands/LoadGameCmd.h src/Commands/SaveGameCmd.cpp src/Commands/SaveGameCmd.h src/Utility/coordinates.h src/Utility/ChessMove.h src/Utility/moveTypes.h)
